More templating and print formatting

--- a/example.yml
+++ b/example.yml
@@ -8,3 +8,9 @@ papers:
       candidates:
         - Dan Trickey
         - Kajetan Champlewski
+  president2:
+    title: President 2
+    date: 2019-03-25
+    candidates:
+      - Dan Trickey
+      - Kajetan Champlewski
