--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 *.tex
-!template.tex
+!template*.tex
 # Created by https://www.gitignore.io/api/latex,python
 # Edit at https://www.gitignore.io/?templates=latex,python
 
